# conqr.io

./: README.md
conqr.io/: Cargo.toml  README.md
conqr.io/src/: client.rs  main.rs  server.rs  shared.rs
splixv2/: Cargo.toml  README.md
splixv2/src/: client.rs  main.rs  server.rs  shared.rs
